@@ -20,6 +20,11 @@ Core and Builtins
 Library
 -------
 
+- Issue 10753 - Characters ';','=' and ',' in the PATH_INFO environment
+  variable won't be quoted when the URI is constructed by the wsgiref.util 's
+  request_uri method. According to RFC 3986, these characters can be a part of
+  params in PATH component of URI and need not be quoted.
+
 - Issue 10738: Fix webbrowser.Opera.raise_opts
 
 - Issue 9824: SimpleCookie now encodes , and ; in values to cater to how
